--- a/app/src/main/res/layout/activity_my_bands.xml
+++ b/app/src/main/res/layout/activity_my_bands.xml
@@ -36,6 +36,12 @@
             android:textColor="@color/white"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="@string/click_band_to_start"/>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_bands_added_RV"
