--- a/app/src/main/res/layout/all_events_layout.xml
+++ b/app/src/main/res/layout/all_events_layout.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:id="@+id/all_events_cardView_CV"
-    android:layout_height="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/all_events_cardView_CV"
     android:layout_width="match_parent"
-    android:elevation="5dp"
-    app:cardCornerRadius="5dp"
-    android:layout_margin="2dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-<LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_margin="2dp"
+    android:elevation="5dp"
+    app:cardCornerRadius="5dp">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="7"
             android:layout_height="wrap_content"
+            android:layout_weight="7"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -61,6 +61,21 @@
                     android:layout_weight="3"
                     android:text="@string/enter_a_place" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/all_events_playlist_TV"
+                    android:layout_width="0dp"
+                    android:layout_weight="6"
+                    android:layout_height="wrap_content"
+                    android:text="@string/playlists"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/all_events_date_TV"
                     android:layout_width="0dp"
@@ -72,37 +87,34 @@
                     android:id="@+id/all_events_time_TV"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:text="12:00" />
-            </LinearLayout>
 
-            <TextView
-                android:id="@+id/all_events_playlist_TV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/playlists"
-                android:textStyle="bold" />
+
+            </LinearLayout>
         </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/all_events_edition"
-        android:layout_width="0dp"
-        android:layout_weight=".5"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/all_events_edit_IV"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_edit"/>
-        <ImageView
-            android:id="@+id/all_events_delete_IV"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_delete"/>
+        <LinearLayout
+            android:id="@+id/all_events_edition"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight=".5"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/all_events_edit_IV"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_edit" />
+
+            <ImageView
+                android:id="@+id/all_events_delete_IV"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_delete" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
